// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WhereBuilder > and > and multiple expressions together 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where \`t0\`.\`number_type\` > ? and \`t0\`.\`number_type\` < ? and \`t0\`.\`number_type\` >= ? and \`t0\`.\`number_type\` <= ?"`;

exports[`WhereBuilder > and > and multiple expressions together 2`] = `
[
  10,
  20,
  30,
  40,
]
`;

exports[`WhereBuilder > and > and multiple filters together with multiple fields 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where \`t0\`.\`number_type\` > ? and \`t0\`.\`string_type\` like ? and \`t0\`.\`number_type\` < ? and \`t0\`.\`string_type\` like ?"`;

exports[`WhereBuilder > and > and multiple filters together with multiple fields 2`] = `
[
  10,
  "foo%",
  20,
  "%bar",
]
`;

exports[`WhereBuilder > and > should properly group AND with a sibling field comparison 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where \`t0\`.\`number_type\` > ? and \`t0\`.\`number_type\` < ? and \`t0\`.\`string_type\` = ?"`;

exports[`WhereBuilder > and > should properly group AND with a sibling field comparison 2`] = `
[
  2,
  10,
  "foo",
]
`;

exports[`WhereBuilder > and > should support nested ors 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where (\`t0\`.\`number_type\` > ? or \`t0\`.\`number_type\` < ?) and (\`t0\`.\`number_type\` >= ? or \`t0\`.\`number_type\` <= ?)"`;

exports[`WhereBuilder > and > should support nested ors 2`] = `
[
  10,
  20,
  30,
  40,
]
`;

exports[`WhereBuilder > and multiple field comparisons together 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where \`t0\`.\`number_type\` = ? and \`t0\`.\`string_type\` like ? and \`t0\`.\`bool_type\` = ?"`;

exports[`WhereBuilder > and multiple field comparisons together 2`] = `
[
  1,
  "foo%",
  true,
]
`;

exports[`WhereBuilder > or > and multiple and filters together 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where ((\`t0\`.\`number_type\` > ? and \`t0\`.\`string_type\` like ?) or (\`t0\`.\`number_type\` < ? and \`t0\`.\`string_type\` like ?))"`;

exports[`WhereBuilder > or > and multiple and filters together 2`] = `
[
  10,
  "foo%",
  20,
  "%bar",
]
`;

exports[`WhereBuilder > or > or multiple expressions together 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where (\`t0\`.\`number_type\` > ? or \`t0\`.\`number_type\` < ? or \`t0\`.\`number_type\` >= ? or \`t0\`.\`number_type\` <= ?)"`;

exports[`WhereBuilder > or > or multiple expressions together 2`] = `
[
  10,
  20,
  30,
  40,
]
`;

exports[`WhereBuilder > or > should properly group OR with a sibling field comparison 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where (\`t0\`.\`number_type\` = ? or \`t0\`.\`number_type\` > ?) and \`t0\`.\`string_type\` = ?"`;

exports[`WhereBuilder > or > should properly group OR with a sibling field comparison 2`] = `
[
  2,
  10,
  "foo",
]
`;

exports[`WhereBuilder > or > should support nested ands 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where ((\`t0\`.\`number_type\` > ? and \`t0\`.\`number_type\` < ?) or (\`t0\`.\`number_type\` >= ? and \`t0\`.\`number_type\` <= ?))"`;

exports[`WhereBuilder > or > should support nested ands 2`] = `
[
  10,
  20,
  30,
  40,
]
`;

exports[`WhereBuilder > or multiple operators for a single field together 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\` where \`t0\`.\`number_type\` > ? and \`t0\`.\`number_type\` < ? and \`t0\`.\`number_type\` >= ? and \`t0\`.\`number_type\` <= ?"`;

exports[`WhereBuilder > or multiple operators for a single field together 2`] = `
[
  10,
  20,
  21,
  31,
]
`;

exports[`WhereBuilder > should accept a empty filter 1`] = `"select \`t0\`.* from \`test_entity\` as \`t0\`"`;

exports[`WhereBuilder > should accept a empty filter 2`] = `[]`;
